
(Martin Hald)
- SF Patch #1456306 - Configuring simple item, fixes SF bugs #1455712, also SF bug #1456566
- SF Patch #1455107 - MetadataValue Database Index
- SF Patch #1455605 - Submit Review Page Schema fix

(Phillip Franks)
- SF Patch #1456173 - updated database_schema.sql for Oracle (partially fixes SF bug #1455290)

(Larry Stone)
- SF Patch #1456761 - PluginManager config-reading bugs (fix patch #1455842)
- SF Patch #1455813 - cleanup dspace.cfg for 1.4
- SF Patch #1455904 - fix crosswalk validation in 1.4alpha1
- SF Patch #1453425 - fix crosswalk + packager configurations

(Larry Stone)
- Documentation updates
  SF Patch #1455780 - Improve doc for configuring x.509 authentication in 1.4
  
(Zuki Ebetsu)
- Fix malformed Japanese texts in RSS feed
  SF Patch #1455790, fixes SF bug #1456585
  
(Stuart Lewis)
- Fix problem with make-handle-config throwing NullPointerException
  SF Patch #1455463, fixes SF bug #1455457

1.4 alpha 1
===========
(Robert Tansley)
- Fix logic in EditItemServlet to enable removal of blank metadata values.
  Fixes bug #1358197.

(Robert Tansley)
- Error displayed on 'choose collection' submit screen instead of blank
  collection list and 'next >' control (which led to error).  Fixes SF bug
  #1363633.

(Anonymous)
- ResourcePolicy.setEPerson(null) now works (was previously setting
  epersongroup_id column to null).  Closes SF bug #1255264.

(Robert Tansley)
- search.index.* configuration lines must now include the schema
  (e.g. dc.title.*).  Note search.index.* no longer backwards compatible. Can
  now also specify unqualified elements (e.g. dc.creator).  Also fixes SF bug
  #1443649.

(Scott Yeadon)
- Add support for branded preview image
  SF Patches: #1330829, #1430437

(Navalkishore Sarda, Scott Yeadon)
- Add/replace Creative Commons in 'edit item' tool (SF patch #1172755)

(Richard Jones)
- Customisable item listing columns and browse indices (SF patch #1324631)

(Scott Yeadon)